--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,3 +1,20 @@
+.container {
+  box-sizing: border-box;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 60px;
+  text-align: center;
+
+}
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 225px);
+  grid-template-rows: repeat(3, 225px);
+  gap: 45px;
+  margin: 0 auto;
+  padding: 0;
+}
+
 .button__add {
   margin: 50px auto ;
   outline: none;
